--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 .footer__container {
     display: flex;
     flex-direction: column;
-    margin: 0 100px;
+    margin: 200px 100px;
 
     &::before {
         content: '';
