--- a/src/global.scss
+++ b/src/global.scss
@@ -3,3 +3,11 @@
         @content
     }
 }
+
+;
+
+@mixin tablet {
+    @media (min-width: 769px) and (max-width: 1280px) {
+        @content
+    }
+}
